--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'tw.com.ruten'
-version = '0.0.3-SNAPSHOT'
+version = '0.0.3'
 sourceCompatibility = '1.8'
 
 configurations {
